objects/Shop_Drawing__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_as_Corrected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved as Corrected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Shop_Drawings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_email_address__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact email address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes_and_Additional_Information__c</fullName>
        <label>Notes and Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Response_Date__c</fullName>
        <inlineHelpText>Date by which you would like the Borrego approver to respond</inlineHelpText>
        <label>Requested Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revise_and_Resubmit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revise and Resubmit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specs_and_Submittals__c</fullName>
        <label>Specs and Submittals</label>
        <referenceTo>Spec_Submittal__c</referenceTo>
        <relationshipName>Shop_Drawings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Revise and Resubmit</fullName>
                </value>
                <value>
                    <fullName>Approved as Corrected</fullName>
                </value>
                <value>
                    <fullName>Approval Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Shop Drawing Old</label>
    <nameField>
        <label>Shop Drawing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shop Drawings Old</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>